--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <ul> <a href="web_labs/lab2/flex/index.html"> Lab2 - Flex</a></ul>
-    <ul> <a href="web_labs/lab2/grid/index.html"> Lab2 - Grid</a></ul>
-    <ul> <a href="web_labs/lab2/no flex no grid/index.html"> Lab2 - Table</a></ul>
+    <ul> <a href="lab2/flex/index.html"> Lab2 - Flex</a></ul>
+    <ul> <a href="lab2/grid/index.html"> Lab2 - Grid</a></ul>
+    <ul> <a href="lab2/no flex no grid/index.html"> Lab2 - Table</a></ul>
 </body>
 </html>
