--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1> LABS </h1>
     <ul> <a href="lab2/flex/index.html"> Lab2 - Flex</a></ul>
     <ul> <a href="lab2/grid/index.html"> Lab2 - Grid</a></ul>
     <ul> <a href="lab2/no flex no grid/index.html"> Lab2 - Table</a></ul>
