--- a/lab3/email/index.html
+++ b/lab3/email/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab2_NoFlexNoGrid</title>
-    <!-- <link rel="stylesheet" href="styles/style.css"> -->
+    <title>Lab3Email</title>
 </head>
 <body style="box-sizing: border-box; width: 99vw; margin: 0; font-family: Arial, Helvetica, sans-serif;">
     <table class="main_table" cellspacing = "0" cellpadding = "0" style="width: 99vw;">
