mobile added and desktop fixed

--- a/lab4/index.html
+++ b/lab4/index.html
@@ -33,16 +33,20 @@
         <div class="main_content_boxes_div">
           <div class="main_content__box box1">
             <img src="./images/box1.png" alt="box1_img " class="box_image box_img1">
-            Inverter<br>Inspection</div>
+            <span class="box_text">Inverter Inspection</span>
+          </div>
           <div class="main_content__box box2">
             <img src="./images/box2.png" alt="box2_img" class="box_image box_img2">
-            Complete<br>Diagnostics</div>
+            <span class="box_text">Complete Diagnostics</span>
+          </div>
           <div class="main_content__box box3">
             <img src="./images/box3.png" alt="box3_img" class="box_image box_img3">
-            Expert Solar Panel<br>Repair</div>
+            <span class="box_text">Expert Solar Panel Repair</span>
+          </div>
           <div class="main_content__box box4">
             <img src="./images/box4.png" alt="box4_img" class="box_image box_img4">
-            Updates&<br>Monitoring</div>
+            <span class="box_text">Updates & Monitoring</span>
+          </div>
         </div>
       </div>
     </section>
