--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <ul> <a href="lab2/flex/index.html"> Lab2 - Flex</a></ul>
     <ul> <a href="lab2/grid/index.html"> Lab2 - Grid</a></ul>
     <ul> <a href="lab2/no flex no grid/index.html"> Lab2 - Table</a></ul>
+    <ul> <a href="lab3/index.html"> Lab3</a></ul>
+    <ul> <a href="lab4/index.html"> Lab4</a></ul>
 </body>
 </html>
